LPS-134174 remove dates as they do not add a lot of information that is already in the ObjectDefinition object
