# modules/apps/object/object-admin-rest-impl/src/main/java/com/liferay/object/admin/rest/internal/resource/v1_0/ObjectDefinitionResourceImpl.java
@@ -84,8 +84,6 @@ public class ObjectDefinitionResourceImpl
 
 		return new ObjectField() {
 			{
-				dateCreated = objectField.getCreateDate();
-				dateModified = objectField.getModifiedDate();
 				id = objectField.getObjectFieldId();
 				indexed = objectField.getIndexed();
 				indexedAsKeyword = objectField.getIndexedAsKeyword();
